bundle/custom/authentication/dex/openldap-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openldap
  name: openldap
  namespace: tanzu-system-auth
spec:
  ports:
  - name: ldap-port
    port: 389
    protocol: TCP
    targetPort: 389
  - name: ssl-ldap-port
    port: 636
    protocol: TCP
    targetPort: 636
  selector:
    app: openldap
    release: openldap
  sessionAffinity: None
  type: ClusterIP
