bundle/custom/authentication/dex/openldap.yaml
---
# Source: openldap/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openldap
  labels:
    app: openldap
    chart: openldap-1.2.5
    release: openldap
    heritage: Helm
spec:
  ports:
    - name: ldap-port
      protocol: TCP
      port: 389
      targetPort: ldap-port
    - name: ssl-ldap-port
      protocol: TCP
      port: 636
      targetPort: ssl-ldap-port
  selector:
    app: openldap
    release: openldap
  type: ClusterIP
---
# Source: openldap/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  openldap
  labels:
    app: openldap
    chart: openldap-1.2.5
    release: openldap
    heritage: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openldap
      release: openldap
  template:
    metadata:
      annotations:
        checksum/configmap-env: f27c96b89d5db41b3a7d712c4ec103b030470b1396f9b744bddb2d63e28f5be2
        checksum/configmap-customldif: 95f91b6588fc5020bcd3c4d5e59103c94e8b1acbff50b965fdb27830b6ae2ef2
      labels:
        app: openldap
        release: openldap
    spec:
      containers:
        - name: openldap
          image: "osixia/openldap:1.2.4"
          imagePullPolicy: IfNotPresent
          args:
            - -l
            - info
            - --copy-service
          ports:
            - name: ldap-port
              containerPort: 389
            - name: ssl-ldap-port
              containerPort: 636
          volumeMounts:
            - name: data
              mountPath: /var/lib/ldap
              subPath: data
            - name: data
              mountPath: /etc/ldap/slapd.d
              subPath: config-data
            - name: ldifworkingdir
              mountPath: /container/service/slapd/assets/config/bootstrap/ldif/custom
          livenessProbe:
            tcpSocket:
              port: ldap-port
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 10
          readinessProbe:
            tcpSocket:
              port: ldap-port
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 10
          resources:
            {}
      volumes:
        - name: customldif
          configMap:
            name: openldap-customldif
        - name: ldifworkingdir
          emptyDir: {}
        - name: certs
          emptyDir:
            medium: Memory
        - name: data
          emptyDir: {}
