bundle/custom/authentication/dex/dex-ingress.tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: tanzu-issuer
    ingress.kubernetes.io/force-ssl-redirect: "true"
  name: dex-ingress
  namespace: tanzu-system-auth
spec:
  rules:
  - host: dex.tkg-man.lab
    http:
      paths:
      - backend:
          serviceName: dexsvc
          servicePort: 5556
  tls:
  - hosts:
    - dex.system.tanzu
    secretName: dex-tls
